# rusty-data-profiler

./: .gitignore  Cargo.toml  Makefile  pyproject.toml
data_profiler/: __init__.py  data_func.py
rusty_data/: __init__.py  data_func.py
rusty_data_profiler/: __init__.py  profiler.py  rusty_data_profiler.pyi
src/: lib.rs  main.rs
src/math/: feature_drift.rs  histogram.rs  mod.rs  stats.rs  types.rs
tests/: test_add.py
tests/test_data/: test_data_func.py  test_profiler.py
