[package]
name = "rusty_data_profiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusty_data_profiler"
crate-type = ["cdylib"]

[dependencies]
ndarray-rand = "0.14.0"
numpy = "0.19.0"
pyo3 = "0.19.0"
