[package]
name = "rusty-data-profiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusty_data_profiler"
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray-rand = "0.14.0"
ndarray = { version = "0.15.6", features = ["rayon", "matrixmultiply-threading",] }
numpy = "0.19.0"
pyo3 = { version = "0.19.2", features = ["extension-module"] }
rayon = "1.7.0"
serde = { version = "1.0.163", features = ["derive"] }
num-traits = "0.2.16"
itertools = "0.11.0"
rstats = "1.3.1"

[dev-dependencies]
tokio = { version = "1.31.0", features = ["rt", "macros"] }
